--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Index - Regna Bootstrap Template</title>
+  <title>Villa Caetano</title>
   <meta name="description" content="">
   <meta name="keywords" content="">
 
@@ -43,8 +43,8 @@
 
       <a href="index.html" class="logo d-flex align-items-center">
         <!-- Uncomment the line below if you also wish to use an image logo -->
-        <!-- <img src="assets/img/logo.png" alt=""> -->
-        <h1 class="sitename">Regna</h1>
+        <img src="assets/img/logo.png" alt="">
+        <!--<h1 class="sitename">Villa Caetano</h1> -->
       </a>
 
       <nav id="navmenu" class="navmenu">
@@ -89,8 +89,8 @@
       <div class="container text-center" data-aos="fade-up" data-aos-delay="100">
         <div class="row justify-content-center">
           <div class="col-lg-8">
-            <h2>Welcome to Our Website</h2>
-            <p>We are team of talented designers making websites with Bootstrap</p>
+            <h2>Escape to Villa Caetano 🌴✨</h2>
+            <p>Your perfect vacation retreat! Experience luxury, comfort, and stunning surroundings in every stay. Book your dream getaway today! </p>
             <a href="#about" class="btn-get-started">Get Started</a>
           </div>
         </div>
